[package]
name = "sesh"
version = "0.1.0"
authors = ["Wen Kokke <wen.kokke@gmail.com>"]
description = "A library for deadlock-free session-typed communication."
repository = "http://github.com/wenkokke/sesh"
license = "MIT"
readme = "README.md"
categories = ["concurrency"]
exclude = ["/doc/*"]

[badges]
travis-ci = { repository = "wenkokke/sesh", branch = "master" }

[dependencies]
crossbeam-channel = "^0.3.8"
either = "^1.5.0"

[dev-dependencies]
compiletest_rs = { version = "*", features = [ "stable", "tmp" ] }
rand = "0.5"
session_types = { git = "https://github.com/Munksgaard/session-types", rev = "42abd00fb1ecefdc83725393f99225de363ce58b" }
