[package]
name = "sesh"
version = "0.1.0"
authors = ["Wen Kokke <wenkokke@users.noreply.github.com>"]
description = "A library for deadlock-free session-typed communication."
repository = "http://github.com/wenkokke/sesh"
license = "MIT"
readme = "README.md"
categories = ["concurrency"]
exclude = ["/bench/*", "/doc/*", "/egv/*"]

[badges]
travis-ci = { repository = "wenkokke/sesh", branch = "master" }

[dependencies]
crossbeam-channel = "^0.3.8"
either = "^1.5.0"

[dev-dependencies]
rand = "0.5"
